# algorep

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README  README.md  README_8md.html  annotated.html  append-entries_8cc.html  append-entries_8cc__incl.dot  append-entries_8cc__incl.map  append-entries_8cc__incl.md5  append-entries_8hh.html  append-entries_8hh__dep__incl.dot  append-entries_8hh__dep__incl.map  append-entries_8hh__dep__incl.md5  append-entries_8hh__incl.dot  append-entries_8hh__incl.map  append-entries_8hh__incl.md5  append-entries_8hh_source.html  classAppendEntries-members.html  classAppendEntries.html  classAppendEntriesResponse-members.html  classAppendEntriesResponse.html  classAppendEntriesResponse__coll__graph.dot  classAppendEntriesResponse__coll__graph.map  classAppendEntriesResponse__coll__graph.md5  classAppendEntriesResponse__inherit__graph.dot  classAppendEntriesResponse__inherit__graph.md5  classAppendEntries__coll__graph.dot  classAppendEntries__coll__graph.md5  classAppendEntries__inherit__graph.dot  classAppendEntries__inherit__graph.map  classAppendEntries__inherit__graph.md5  classClient-members.html  classClient.html  classClock-members.html  classClock.html  classController-members.html  (+831 more)
.github/workflows/: cmake.yml  gh pages.yml  gh-pages.yml
lib/utils/: clock.hh  debugger.cc  debugger.hh  entry.cc  entry.hh  singleton.hh  singleton.hxx  string-utils.cc  string_utils.cc  string_utils.hh
lib/utils/clock/: clock.cc  clock.hh  lib-clock.cc  lib-clock.hh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_2.js  classes_4.js  classes_6.js  classes_8.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  defines_1.js  defines_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  (+83 more)
src/: client.cc  client.hh  controller.hh  main.cc  node.cc  node.hh
src/message/: message.cc  message.hh
src/mpi_classes/: client.cc  client.hh  controller.cc  controller.hh  node.cc  node.hh  process-information.cc  process-information.hh
src/mpiclasses/: client.hh  controller.cc  controller.hh  node.cc  node.hh
src/rpc/: append-entries-response.cc  append-entries-response.hh  append-entries.cc  append-entries.hh  appendentries.cc  appendentries.hh  appendentriesresponse.cc  appendentriesresponse.hh  entry.cc  entry.hh  get-state-response.cc  get-state-response.hh  get-state.cc  get-state.hh  lib-rpc.cc  lib-rpc.hh  message-response.cc  message-response.hh  message.cc  message.hh  new-entry-response.cc  new-entry-response.hh  new-entry.cc  new-entry.hh  request-vote-response.cc  request-vote-response.hh  request-vote.cc  request-vote.hh  requestvote.cc  requestvote.hh  requestvoteresponse.cc  requestvoteresponse.hh  rpc-query.cc  rpc-query.hh  rpc-response.cc  rpc-response.hh  rpc.cc  rpc.hh  search-leader-response.cc  search-leader-response.hh  (+2 more)
src/utils/: clock.cc  clock.hh
test/: test.cc
tests/: merge_log.py  run_tests.sh  test.cpp
tests/integration/: basic_double_client.in  basic_single_client.in  check_local_log_before_after_commit.in  check_local_log_before_after_commit.out  check_multiple_commit.in  check_no_leader.in  check_no_leader.out  check_one_commit.in  check_shutdown_all.in  check_shutdown_one.in  check_single_leader.in  check_single_leader.out  command_list_single_client.in  command_list_two_clients.in  commit_with_crash_and_recover.in  commit_with_crash_and_recover.out  commits_with_leader_disconnect.in  commits_with_leader_disconnect.out  crash_all.in  crash_and_recover_all.in  crash_and_recover_follower.in  crash_and_recover_follower.out  crash_and_recover_one.in  crash_follower.in  crash_follower.out  crash_one.in  disconnect_leader_briefly.in  disconnect_leader_briefly.out
tests/unit_tests/: example.cc  main.cc
